--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ header/picture/frame1.h
 header/picture/frame2.h
 header/picture/picture.zip
 header/picture/picture.zip
+objects/kernel8.img
+objects/kernel8.elf
